Added comparison to grades chart

--- a/MathsGradeAssessmentTool/Forms/StartTeacherForm.resx
+++ b/MathsGradeAssessmentTool/Forms/StartTeacherForm.resx
@@ -162,4 +162,10 @@
   <metadata name="studentCompentencyTableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 95</value>
   </metadata>
+  <metadata name="competencyBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>259, 95</value>
+  </metadata>
+  <metadata name="competencyTableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>456, 95</value>
+  </metadata>
 </root>
