--- a/MathsGradeAssessmentTool/Forms/TeacherDetailsForm.resx
+++ b/MathsGradeAssessmentTool/Forms/TeacherDetailsForm.resx
@@ -167,4 +167,7 @@
   <metadata name="SchoolID.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="TeacherAverageGrade.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
 </root>
